fix(site-header): fix mobile site-name overlapping menu - FRONT-3579

--- a/src/implementations/vanilla/components/site-header-standardised/site-header-standardised-ec.scss
+++ b/src/implementations/vanilla/components/site-header-standardised/site-header-standardised-ec.scss
@@ -220,6 +220,10 @@ $_search-width-xl: 31.5rem;
   }
 }
 
+.ecl-site-header-standardised__site-name {
+  margin-right: map.get(theme.$spacing, '3xl');
+}
+
 // stylelint-disable plugin/selector-bem-pattern
 .ecl-search-form__button .ecl-button__label {
   display: none;
@@ -297,6 +301,7 @@ $_search-width-xl: 31.5rem;
   .ecl-site-header-standardised__site-name {
     align-self: center;
     flex-grow: 1;
+    margin-right: 0;
     padding: map.get(theme.$spacing, 'l') 0;
   }
 
